fix latest list illo gap

--- a/sass/layout/_homepage.scss
+++ b/sass/layout/_homepage.scss
@@ -124,9 +124,12 @@
   }
 }
 
+.latest-list-illustration img {
+  display: block;
+}
+
 .latest-list.highlight-box {
   background-color: #fbf9f7;
-  margin-top: -1rem;
   box-shadow: 0 0 10rem 0 rgba(0, 0, 0, 0.065);
   border-radius: 0 0 0.3rem 0.3rem;
 }
